--- a/src/NOCQ/NOCQ.csproj
+++ b/src/NOCQ/NOCQ.csproj
@@ -54,9 +54,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ImapInput.cs" />
     <Compile Include="Extensability\Catalog.cs" />
     <Compile Include="Imports\IDataImport.cs" />
+    <Compile Include="Plugins\Email\ImapInput.cs" />
+    <Compile Include="Plugins\Email\EmailSettings.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -65,5 +66,7 @@
   <ItemGroup>
     <Folder Include="Extensability\" />
     <Folder Include="Imports\" />
+    <Folder Include="Plugins\" />
+    <Folder Include="Plugins\Email\" />
   </ItemGroup>
 </Project>
