--- a/src/NOCQ/packages.config
+++ b/src/NOCQ/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="csredis" version="1.4.7.1" targetFramework="net45" />
   <package id="Microsoft.Composition" version="1.0.27" targetFramework="net45" />
 </packages>
