--- a/src/NOCQ/NOCQ.csproj
+++ b/src/NOCQ/NOCQ.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Extensability\Catalog.cs" />
     <Compile Include="Imports\IDataImportHook.cs" />
     <Compile Include="Imports\DataImports.cs" />
+    <Compile Include="DB\RedisDataase.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -65,5 +66,6 @@
   <ItemGroup>
     <Folder Include="Extensability\" />
     <Folder Include="Imports\" />
+    <Folder Include="DB\" />
   </ItemGroup>
 </Project>
