--- a/src/NOCQ/NOCQ.csproj
+++ b/src/NOCQ/NOCQ.csproj
@@ -54,6 +54,7 @@
     <Reference Include="csredis">
       <HintPath>..\..\packages\csredis.1.4.7.1\lib\net40\csredis.dll</HintPath>
     </Reference>
+    <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
