--- a/src/NOCQ.Application/NOCQ.Application.csproj
+++ b/src/NOCQ.Application/NOCQ.Application.csproj
@@ -9,6 +9,7 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>NOCQ.Application</RootNamespace>
     <AssemblyName>NOCQ.Application</AssemblyName>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -36,4 +37,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <ProjectReference Include="..\NOCQ\NOCQ.csproj">
+      <Project>{83651B7D-B58F-46B8-BFE2-BCC0A6C92C7A}</Project>
+      <Name>NOCQ</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
