--- a/src/NOCQ/packages.config
+++ b/src/NOCQ/packages.config
@@ -3,4 +3,5 @@
   <package id="AE.Net.Mail" version="1.7.9.1" targetFramework="net45" />
   <package id="csredis" version="1.4.7.1" targetFramework="net45" />
   <package id="Microsoft.Composition" version="1.0.27" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net45" />
 </packages>
