--- a/src/NOCQ/NOCQ.csproj
+++ b/src/NOCQ/NOCQ.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.Configuration" />
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\..\packages\Newtonsoft.Json.6.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Package>monodevelop</Package>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -71,7 +72,6 @@
     <Compile Include="Plugins\Email\ImapInput.cs" />
     <Compile Include="Plugins\Email\IEmailSetting.cs" />
     <Compile Include="Model\Alert.cs" />
-    <Compile Include="Plugins\Email\IParseRule.cs" />
     <Compile Include="Model\IAlert.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
