--- a/src/NOCQ/NOCQ.csproj
+++ b/src/NOCQ/NOCQ.csproj
@@ -66,11 +66,11 @@
     <Compile Include="Plugins\Email\EmailSettings.cs" />
     <Compile Include="Imports\IDataImportHook.cs" />
     <Compile Include="Imports\DataImports.cs" />
-    <Compile Include="DB\RedisDataase.cs" />
     <Compile Include="Plugins\Email\ParseRule.cs" />
     <Compile Include="Plugins\Email\ImapInput.cs" />
     <Compile Include="Model\Alert.cs" />
     <Compile Include="DB\RedisQueues.cs" />
+    <Compile Include="DB\RedisDatabase.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
