basic and pretty bad settings parsing from settings.json

--- a/src/NOCQ.Application/NOCQ.Application.csproj
+++ b/src/NOCQ.Application/NOCQ.Application.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
@@ -43,5 +44,10 @@
       <Project>{83651B7D-B58F-46B8-BFE2-BCC0A6C92C7A}</Project>
       <Name>NOCQ</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="settings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
