--- a/src/NOCQ/NOCQ.csproj
+++ b/src/NOCQ/NOCQ.csproj
@@ -58,8 +58,8 @@
     <Reference Include="System.Configuration" />
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\..\packages\Newtonsoft.Json.6.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Package>monodevelop</Package>
     </Reference>
+    <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -73,6 +73,10 @@
     <Compile Include="Plugins\Email\IEmailSetting.cs" />
     <Compile Include="Model\Alert.cs" />
     <Compile Include="DB\RedisQueues.cs" />
+    <Compile Include="Settings\SettingsFIle.cs" />
+    <Compile Include="Settings\RedisSettings.cs" />
+    <Compile Include="Settings\SettingsParser.cs" />
+    <Compile Include="Settings\PluginSettings.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -85,5 +89,6 @@
     <Folder Include="Plugins\" />
     <Folder Include="Plugins\Email\" />
     <Folder Include="Model\" />
+    <Folder Include="Settings\" />
   </ItemGroup>
 </Project>
