--- a/src/NOCQ.EmailPlugin/NOCQ.EmailPlugin.csproj
+++ b/src/NOCQ.EmailPlugin/NOCQ.EmailPlugin.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DF8CD7EA-76FC-4B57-B24A-52C6373A8EDF}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>NOCQ.Application</RootNamespace>
-    <AssemblyName>NOCQ.Application</AssemblyName>
+    <ProjectGuid>{8A49052A-7BD4-4F12-898C-AF398DA5BD07}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <RootNamespace>NOCQ.EmailPlugin</RootNamespace>
+    <AssemblyName>NOCQ.EmailPlugin</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -17,7 +17,7 @@
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Externalconsole>true</Externalconsole>
+    <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>full</DebugType>
@@ -25,16 +25,19 @@
     <OutputPath>bin\Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Externalconsole>true</Externalconsole>
+    <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="MyClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Email\EmailSettings.cs" />
+    <Compile Include="Email\ImapInput.cs">
+      <DependentUpon>..\..\NOCQ\Plugins\Email\EmailSettings.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Email\ParseRule.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -42,10 +45,5 @@
       <Project>{83651B7D-B58F-46B8-BFE2-BCC0A6C92C7A}</Project>
       <Name>NOCQ</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="settings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 </Project>
